Fix Errors between CI and SI Engines in Step 26 check for missing Supported SPNs